--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "nerdic.net",
   "license": "ISC",
   "dependencies": {
+    "@discordjs/core": "^0.6.0",
     "discord.js": "^12.5.3"
   }
 }
