--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "melonsbot",
-  "version": "1.0.0",
+  "version": "2.0.7",
   "description": "MelonsBot for Discord Server",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "author": "nerdic.net",
   "license": "ISC",
   "dependencies": {
     "@discordjs/core": "^0.6.0",
     "discord.js": "^12.5.3"
-  }
+  },
+  "engines": { "node" : "18.16.0" }
 }
