--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "melonsbot",
-  "version": "2.0.7",
+  "version": "3.0.0",
   "description": "MelonsBot for Discord Server",
   "main": "index.js",
   "scripts": {
@@ -10,7 +10,15 @@
   "license": "ISC",
   "dependencies": {
     "@discordjs/core": "^0.6.0",
-    "discord.js": "^12.5.3"
+    "discord.js": "^14.16.3"
   },
-  "engines": { "node" : "16.20.0" }
+  "engines": {
+    "node": "22.9.0"
+  },
+  "devDependencies": {
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.12.0",
+    "eslint": "^9.12.0",
+    "globals": "^15.11.0"
+  }
 }
